mula_proc_macro/tests/02-no-input.rs
use mula_proc_macro::mula;

#[mula]
fn mula_fn() -> String {
    String::new()
}

fn main() {}